# s3project

./: .gitignore  ARDUINO_GUIDE.md  CMakeLists.txt  EXECUTION_GUIDE.md  README.md  UART_PUBSUB_README.md
arduinoCode/: arduino.ino  arduino_pubsub.ino  motor.ino  mqtt_esp32.ino  nano.ino
include/: uart_broker.h  uart_comm.h  uart_message.h
src/: uart_broker_impl.cpp  uart_comm_impl.cpp  uart_main.cpp  uart_message_impl.cpp  uart_pubsub_main.cpp
